--- a/users/templates/registered/dashboard2.html
+++ b/users/templates/registered/dashboard2.html
@@ -597,7 +597,7 @@
             }
         
             try {
-                const response = await fetch('/en/save-spotify-data/', {
+                const response = await fetch('/en/handle-spotify-data/', {
                     method: 'POST',
                     credentials: 'same-origin',
                     headers: {
