--- a/users/templates/registered/dashboard2.html
+++ b/users/templates/registered/dashboard2.html
@@ -572,6 +572,7 @@
     </button>
 
     <script>
+        
         function getCookie(name) {
             console.log('All cookies:', document.cookie);
             const cookies = document.cookie.split('; ');
@@ -587,6 +588,7 @@
             return null;
         }
         
+        const lang = "{{ lang }}"
         async function saveSpotifyData(wrapperType) {
             const csrfToken = getCookie('csrftoken');
             
@@ -597,7 +599,7 @@
             }
         
             try {
-                const response = await fetch('/en/handle-spotify-data/', {
+                const response = await fetch(`/{{ lang }}/handle-spotify-data/`, {
                     method: 'POST',
                     credentials: 'same-origin',
                     headers: {
